deploy_mariadb.yaml
# =========================
# MariaDB (Deployment + SVC)
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: wordpress
  labels: { app: mariadb, tier: database }
spec:
  replicas: 1
  selector:
    matchLabels: { app: mariadb, tier: database }
  template:
    metadata:
      labels: { app: mariadb, tier: database }
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: mariadb
          image: mariadb:latest           # use :10.6 if needed
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
