deploy_wordpress.yaml
# =========================
# WordPress (Deployment + SVC)
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels: { app: wordpress, tier: frontend }
spec:
  replicas: 1
  selector:
    matchLabels: { app: wordpress, tier: frontend }
  template:
    metadata:
      labels: { app: wordpress, tier: frontend }
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: wordpress
          image: wordpress:latest
          imagePullPolicy: IfNotPresent
          ports:
            - { containerPort: 8080, name: http }
          volumeMounts:
            - name: apache-ports
              mountPath: /etc/apache2/ports.conf
              subPath: ports.conf
              readOnly: true
            - name: apache-site
              mountPath: /etc/apache2/sites-available/000-default.conf
              subPath: 000-default.conf
              readOnly: true
            - name: wp-content
              mountPath: /var/www/html
      volumes:
        - name: apache-ports
          configMap:
            name: wordpress-apache-config
            items:
              - { key: ports.conf, path: ports.conf }
        - name: apache-site
          configMap:
            name: wordpress-apache-config
            items:
              - { key: 000-default.conf, path: 000-default.conf }
        - name: wp-content
          persistentVolumeClaim:
            claimName: wordpress-pvc
