svc_mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress
spec:
  selector: { app: mariadb, tier: database }
  ports:
    - port: 3306
      targetPort: 3306
