svc_phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: wordpress
spec:
  selector: { app: phpmyadmin }
  ports:
    - name: http
      port: 80
      targetPort: 8080
