route_wordpress.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  namespace: wordpress
spec:
  to: { kind: Service, name: wordpress }
  port: { targetPort: http }
  tls: { termination: edge }
